new method implemented
