# api/docs/swagger.yaml
@@ -401,6 +401,8 @@ definitions:
         type: string
       price:
         type: number
+      total_bookings:
+        type: integer
       updated_at:
         type: string
     type: object
@@ -1203,6 +1205,23 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Fetches services
+      tags:
+      - service
+  /services/popular:
+    get:
+      description: Gets popular services
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/services.SearchResp'
+        "500":
+          description: Server error while processing request
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Gets popular services
       tags:
       - service
   /services/search:
